syntax = "proto3";
import "sql_options/sql_options.proto";

package db;
 
message tbld_gmlist
{
    uint64 id     = 1 [(sql).primary_key = "idx_id", (sql).auto_increment = true]; // id
    string openid = 2 [(sql).size = 255];                                          // openid
    uint32 gmlev  = 3;                                                             // gm等级
}
 
message tbld_globalvar
{
    uint32 key        = 1 [(sql).primary_key = "idx_id"]; // key
    uint64 value0     = 2;                                // value
    uint64 value1     = 3;                                // value
    uint64 value2     = 4;                                // value
    uint64 value3     = 5;                                // value
    string value_str0 = 6 [(sql).size = 255];             // value_str
    string value_str1 = 7 [(sql).size = 255];             // value_str
    string value_str2 = 8 [(sql).size = 255];             // value_str
    string value_str3 = 9 [(sql).size = 255];             // value_str
}

message tbld_guild
{
    uint64 id = 1 [(sql).primary_key = "idx_id", (sql).auto_increment = true]; // id

    uint64 lev  = 2;                    //帮派等级
    string name = 3 [(sql).size = 255]; //帮派名称

    uint64 leader_id    = 4;                      //帮主id
    string leader_name  = 5 [(sql).size = 32];    //帮主名称
    uint64 creator_id   = 6;                      //创建人ID
    string creator_name = 7 [(sql).size = 32];    //创建人名称
    uint32 create_time  = 8;                      //创帮时间
    uint32 del_time     = 9;                      //删除时间
    string slogan       = 10 [(sql).size = 255];  //口号
    string info1        = 11 [(sql).size = 1024]; //信息
    string info2        = 12 [(sql).size = 1024]; //信息
    string info3        = 13 [(sql).size = 1024]; //信息
    uint64 flag         = 14;                     //设置掩码
}


message tbld_guild_memberinfo
{
    uint64 id          = 1 [(sql).primary_key = "idx_id"]; // id

    uint64 guildid     = 2; //guildid
    uint32 rank        = 3; //帮派职位
    uint32 score       = 4; //帮派贡献
    uint32 total_score = 5; //帮派贡献累计
    uint32 join_time   = 6; //入帮时间
    uint32 level       = 7; //等级
    uint32 name        = 8; //名字

    uint32 last_login_time  = 9; //最后登录时间
    uint32 last_logout_time = 10; //最后登出时间
}